@@ -50,6 +50,19 @@ dependencies {
             "ch.qos.logback:logback-classic",
     )
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    testAnnotationProcessor(
+            platform("org.springframework.boot:spring-boot-dependencies:$ver.springBoot"),
+            "org.projectlombok:lombok",
+    )
+
+    testCompileOnly(
+            "org.projectlombok:lombok",
+    )
+
+    testImplementation(
+            "org.springframework.boot:spring-boot-starter-test",
+    )
 }
 
 //project.gradle.startParameter.excludedTaskNames.add("generateServerOpenApiModels")
@@ -62,8 +75,7 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs = [
             '-parameters',
             '-Xlint:unchecked',
-            '-Xlint:deprecation',
-            '--enable-preview'
+            '-Xlint:deprecation'
     ]
     options.fork = true
 //    options.forkOptions.jvmArgs += "-Dmicronaut.openapi.views.spec=swagger-ui.enabled=true,swagger-ui.js.url=/openapi/res/"
@@ -81,6 +93,30 @@ configurations.configureEach {
 }
 repositories {
     mavenCentral()
+}
+
+test {
+    useJUnitPlatform() // Включает поддержку JUnit 5
+
+    // Позволяет видеть вывод логов (log.info) прямо в консоли при запуске через Gradle
+    testLogging {
+        showStandardStreams = true
+        showExceptions = true
+        showStackTraces = true
+    }
+    outputs.upToDateWhen { false }
+
+    // НАСТРОЙКИ ПАМЯТИ
+    minHeapSize = "2g"       // Начальный размер кучи
+    maxHeapSize = "4g"       // Максимальный размер кучи
+
+    // Дополнительные JVM аргументы для производительности тестов
+    jvmArgs([
+            "-XX:MaxMetaspaceSize=512m",        // Размер для метаданных классов
+            "-XX:+UseG1GC",                     // Современный сборщик мусора
+            "-XX:+UseStringDeduplication",      // Экономия памяти на повторяющихся строках JSON
+            "-Dfile.encoding=UTF-8"             // Корректная кодировка для логов
+    ])
 }
 //kotlin {
 //    jvmToolchain(25)
